Fixed blog window still has pointer event when invisible

--- a/style/myblogs.css
+++ b/style/myblogs.css
@@ -94,8 +94,6 @@
 
     z-index: 1;
 
-    pointer-events: auto;
-
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -132,7 +130,7 @@
     border-radius: 999px;
 
     color: white;
-    
+
     z-index: 1;
 }
 
